# gohere

./: .gitignore  Cargo.toml  Rocket.toml  build  build.sh  deploy
html/: index.html
resources/css/: style.css
src/: .main.rs.swp  main.rs
templates/: city.hbs  css.hbs  favicon_info.hbs  index.hbs  logo.hbs  logosvg.hbs  subpage_header.hbs
