[package]
name = "gohere"
version = "0.1.0"
authors = ["Ryan Gorup <gorup@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.4.2"
# hyper = { git = "https://github.com/hyperium/hyper" }
# tokio = { git = "https://github.com/tokio-rs/tokio", default-features = false, features = ["rt-full"] }
# runtime = "0.3.0-alpha.6"
# futures-preview = "0.3.0-alpha.17"
# rustls = "0.15.2"
rocket = { version = "0.4.2", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates"]
